ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web1
          servicePort: 80
        path: /web1(/|$)(.*)
      - backend:
          serviceName: web2
          servicePort: 80
        path: /web2(/|$)(.*)
      - backend:
          serviceName: default-web
          servicePort: 80
        path: /(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-static
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: default-web
          servicePort: 80
        path: /static(/|$)(.*)
